2003-07-16      Greg Menke <gregory.menke@gsfc.nasa.gov>

	PR 428/bsps
	PR 432/bsps
	* pci/pcibios.c, pci/pcibios.h: Added BSP_pci_Find_Device() which
	is copied from motorola_shared.

2003-03-18	Joel Sherrill <joel@OARcorp.com>

	* comm/GDB.HOWTO: Updated.

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* comm/i386-stub.c: Fixed places where debug_error() was not called
	with enough arguments.

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* comm/i386-stub.c: Removed warnings.

2002-09-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* pci/pcibios.c: #include <string.h>.

2002-08-05	Eric Norum <eric.norum@usask.ca>

	* pci/pcibios.c: Per PR262, removed all asserts so probes for 
	devices that are not present will work.  This lets you have
	multiple PCI Ethernet drivers in an application and dynamically
	use the one for the card othat is present.

2002-07-16	Eric Norum <eric.norum@usask.ca>

	* comm/uart.c: I am using a PC-104 card with no video output.  I
	found that things would lock up if a printk was followed closely by
	a printf when BSPConsolePort = BSP_UART_COM2 and
	BSPPrintkPort = BSP_UART_COM1.  With this change in place,
	printf/printk calls can be intermingled with no apparent problems.

2002-05-01	Eric Norum <eric.norum@usask.ca>

	* console/console.c, fatal/bspfatal.c, startup/bspclean.c, 
	startup/page_table.c: Per PR200 fix multi-line inline assembly 
	to satisfy gcc 3.1 and newer.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* comm/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* io/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* irq/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* pci/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* irq/irq_init.c: Include rtems/bspIo.h instead of bspIo.h.

2001-10-12	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Fixed typo.

2001-09-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* irq/Makefile.am: Use 'PREINSTALL_FILES ='.