@@ -5,4 +5,4 @@
 
 all-local: $(PREINSTALL_FILES)
 
-include $(top_srcdir)/../../../../../automake/local.am
+include $(top_srcdir)/../../../automake/local.am
