@@ -20,4 +20,4 @@ all-local: $(PREINSTALL_FILES)
 
 EXTRA_DIST = idt.c irq.c irq_asm.S irq_init.c
 
-include $(top_srcdir)/../../../../../automake/local.am
+include $(top_srcdir)/../../../automake/local.am
