@@ -19,4 +19,4 @@ all-local: $(PREINSTALL_FILES)
 
 EXTRA_DIST = pcibios.c
 
-include $(top_srcdir)/../../../../../automake/local.am
+include $(top_srcdir)/../../../automake/local.am
