@@ -1,3 +1,11 @@
+2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	Makefile.am: Reflect having moved automake.
+	comm/Makefile.am: Reflect having moved automake.
+	io/Makefile.am: Reflect having moved automake.
+	irq/Makefile.am: Reflect having moved automake.
+	pci/Makefile.am: Reflect having moved automake.
+
 2003-07-16      Greg Menke <gregory.menke@gsfc.nasa.gov>
 
 	PR 428/bsps
